Minor doc cleanups
Signed-off-by: Christopher Grote <chris@thegrotes.net>

--- a/site/docs/release-notes/2-11.md
+++ b/site/docs/release-notes/2-11.md
@@ -10,27 +10,27 @@
 ??? tip "Known issue: use chromium-based browser for UIs"
     It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for
     the Egeria React UI. Some parts of the UI experience such as Dino currently experience problems with
-    Firefox. See [odpi/egeria-react-ui#96](https://github.com/odpi/egeria-react-ui/issues/96).
+    Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
 
 ???+ functional "Functional changes"
 
     ??? added "Multiple topics for a cohort"
-        An [open metadata repository cohort](../open-metadata-implementation/admin-services/docs/concepts/cohort-member.md)
+        An [open metadata repository cohort](/egeria-docs/services/omrs/cohort)
         uses three types of events to enable peer-to-peer sharing of metadata.
         In previous releases, these events have all been exchanged through a single
         event topic.  Release 2.11 provides the option for a cohort to
         use a dedicated topic for each type of event.
         This improves the time to register a new member in the cohort
-        and allows multiple instances of a [Metadata Server](../open-metadata-implementation/admin-services/docs/concepts/metadata-server.md)
-        or a [Metadata Access Point](../open-metadata-implementation/admin-services/docs/concepts/metadata-access-point.md)
+        and allows multiple instances of a [metadata server](/egeria-docs/concepts/metadata-server)
+        or a [metadata access point](/egeria-docs/concepts/metadata-access-point)
         to access the cohort.
     
         Details of these new options can be found in the
-        [Administration Guide](../open-metadata-implementation/admin-services/docs/user/configuring-registration-to-a-cohort.md).
+        [administration guide](/egeria-docs/guides/admin/configuring-registration-to-a-cohort).
     
     ??? added "Data Manager OMAS extension to support capture of event metadata"
     
-        The [Data Manager OMAS](../open-metadata-implementation/access-services/data-manager)
+        The [Data Manager OMAS](/egeria-docs/services/omas/data-manager)
         has been extended to support the capture of metadata from
         Event Brokers such as Apache Kafka and API Managers
         such as an API Gateway.
@@ -40,10 +40,10 @@
         to support integration connectors 
         that extract metadata from these types of data managers:
     
-        - [Topic Integrator OMIS](../open-metadata-implementation/integration-services/topic-integrator)
+        - [Topic Integrator OMIS](/egeria-docs/services/omis/topic-integrator)
           supports integration connectors extracting metadata
           from Event Brokers.
-        - [API Integrator OMIS](../open-metadata-implementation/integration-services/api-integrator)
+        - [API Integrator OMIS](/egeria-docs/services/omis/api-integrator)
           supports integration connectors extracting API information from API managers.
     
         For more information on the use of the Data Manager OMAS with
