--- a/site/docs/release-notes/3-1.md
+++ b/site/docs/release-notes/3-1.md
@@ -9,7 +9,7 @@
 ??? tip "Known issue: use chromium-based browser for UIs"
     It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for
     the Egeria React UI. Some parts of the UI experience such as Dino currently experience problems with
-    Firefox. See [odpi/egeria-react-ui#96](https://github.com/odpi/egeria-react-ui/issues/96).
+    Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
 
 ???+ types "Type changes: :material-plus-circle: added, :material-adjust: modified, :material-alert-circle: deprecated"
     ??? added "Data processing purposes"
