Updates to follow documentation guide
Signed-off-by: Christopher Grote <chris@thegrotes.net>

--- a/site/docs/release-notes/2-11.md
+++ b/site/docs/release-notes/2-11.md
@@ -158,6 +158,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-2.11){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](2-11.png)](../roadmap)
+    [![Egeria implementation status](2-11.svg)](../roadmap)
 
 --8<-- "snippets/abbr.md"
