--- a/site/docs/release-notes/3-1.md
+++ b/site/docs/release-notes/3-1.md
@@ -44,6 +44,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.png)](../roadmap)
+    [![Egeria implementation status](latest.svg)](../roadmap)
 
 --8<-- "snippets/abbr.md"
