Fixes after lineage review
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/2-11.md
+++ b/site/docs/release-notes/2-11.md
@@ -47,7 +47,7 @@
     
         For more information on the use of the Data Manager OMAS with
         these integration services, see the 
-        [Data Manager Integration](../open-metadata-publication/website/solutions/data-manager-integration)
+        [Data Manager Integration](/egeria-docs/scenarios/data-manager-integration)
         solution.
     
     ??? removed "Information View OMAS, Virtualization Services, Security Officer Services, Gaian connector"
