--- a/site/docs/release-notes/2-9.md
+++ b/site/docs/release-notes/2-9.md
@@ -60,6 +60,6 @@ Open Metadata and Governance vision, strategy and content.
 
 # Further Help and Support
 
-See the [Community Guide](../Community-Guide.md).
+See the [Community Guide](/egeria-docs/guides/community).
 
 --8<-- "snippets/abbr.md"
