--- a/site/docs/release-notes/1-3.md
+++ b/site/docs/release-notes/1-3.md
@@ -10,17 +10,17 @@ released in [1.4](release-notes-1-4.md).
 
 Below are the highlights of the 1.3 release:
 
-* The [hands-on labs](../open-metadata-resources/open-metadata-labs) have been updated to provide
+* The [hands-on labs](/egeria-docs/education/open-metadata-labs) have been updated to provide
   reusable Python functions for working with Egeria.
   
 * The management of open metadata types includes formal versioning and patching of types.
   This makes it clearer where additions and updates are being made to the open metadata types.
-  See [open metadata types archive](../open-metadata-resources/open-metadata-archives/open-metadata-types).
+  See [open metadata types archive](/egeria-docs/types).
   
 * There are the following changes to the open metadata types:
-   * The [EmbeddedConnection](../open-metadata-publication/website/open-metadata-types/0205-Connection-Linkage.md) has a new property called `position`.
-   * The [OpenDiscoveryAnalysisReport](../open-metadata-publication/website/open-metadata-types/0605-Open-Discovery-Analysis-Reports.md) has a new property called `discoveryRequestStep`.
-   * There is a new collection of [Annotations](../open-metadata-publication/website/open-metadata-types/0655-Asset-Deduplication.md) for recording suspected duplicates and divergent values in acknowledged duplicates.
+   * The [EmbeddedConnection](/egeria-docs/types/2/0205-Connection-Linkage) has a new property called `position`.
+   * The [OpenDiscoveryAnalysisReport](/egeria-docs/types/6/0605-Open-Discovery-Analysis-Reports) has a new property called `discoveryRequestStep`.
+   * There is a new collection of [Annotations](/egeria-docs/types/6/0655-Asset-Deduplication) for recording suspected duplicates and divergent values in acknowledged duplicates.
      This is to support the asset deduplication work scheduled for the next release.
 
 * There are new [open metadata archive](../open-metadata-resources/open-metadata-archives) utilities for creating your own open metadata archives.
