--- a/site/docs/release-notes/3-4.md
+++ b/site/docs/release-notes/3-4.md
@@ -1,7 +1,7 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.4 (Planned December 2021)
+# Release 3.4 (Planned for December 2021)
 
 ??? info "Known issue: use chromium-based browser for UIs"
     
