fixing broken links in release-notes
Signed-off-by: Ljupcho Palashevski <ljupcho.palashevski@ing.com>

--- a/site/docs/release-notes/1-3.md
+++ b/site/docs/release-notes/1-3.md
@@ -6,7 +6,7 @@
 Release 1.3 focuses on the support for open metadata archives, and formal versioning of open metadata types.
 It includes much of the ground-work for
 supporting design lineage and the detection and management of duplicate assets but that function is officially
-released in [1.4](release-notes-1-4.md).
+released in [1.4](/egeria-docs/release-notes/1-4).
 
 Below are the highlights of the 1.3 release:
 
@@ -55,7 +55,7 @@ Below are the highlights of the 1.3 release:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.3.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
