--- a/site/docs/release-notes/2-10.md
+++ b/site/docs/release-notes/2-10.md
@@ -22,7 +22,7 @@ Details of these and other changes are in the sections that follow.
   the **Collection** entity.  In 2.10, the Campaign classification has been changed to attach to **Referenceable**
   to allow it to be connected to **Project** without affecting backward compatibility.
   
-  See new type description in model [0130](../open-metadata-publication/website/open-metadata-types/0130-Projects.md).
+  See new type description in model [0130](/egeria-docs/types/1/0130-Projects.md).
   
 * Extension of the **UsedInContext** relationship.
 
@@ -31,7 +31,7 @@ Details of these and other changes are in the sections that follow.
   the context to be a **Referenceable**.  This means that the context where glossary terms are valid can be expressed
   as elements such as projects, business capabilities, parts of an organization, subject areas, zones and many more.
 
-  See new type description in model [0360](../open-metadata-publication/website/open-metadata-types/0360-Contexts.md).
+  See new type description in model [0360](/egeria-docs/types/3/0360-Contexts.md).
   
 * Allowing ownership to be expressed as a **PersonRole**.
 
@@ -45,7 +45,7 @@ Details of these and other changes are in the sections that follow.
   ownership properties in them have been updated to deprecate these properties in favor of using
   the Ownership classification.  The **AssetOwnership** classification is also deprecated.
 
-  See new type description in model [0445](../open-metadata-publication/website/open-metadata-types/0445-Governance-Roles.md).
+  See new type description in model [0445](/egeria-docs/types/4/0445-Governance-Roles.md).
 
 * Update to **Certification** relationship.
 
@@ -53,7 +53,7 @@ Details of these and other changes are in the sections that follow.
   new attributes to specify the type and property names of the identifier used to identify these people.
   This is consistent with the new **Ownership** classification.
   
-  See new type descriptions in model [0482](../open-metadata-publication/website/open-metadata-types/0482-Certifications.md).
+  See new type descriptions in model [0482](/egeria-docs/types/4/0482-Certifications.md).
 
 * Update to **License** relationship.
 
@@ -61,7 +61,7 @@ Details of these and other changes are in the sections that follow.
   new attributes to specify the type and property names of the identifier used to identify these people.
   This is consistent with the new **Ownership** classification.
   
-  See new type descriptions in model [0481](../open-metadata-publication/website/open-metadata-types/0481-Licenses.md).
+  See new type descriptions in model [0481](/egeria-docs/types/4/0481-Licenses.md).
 
 * Governance role updates.
 
@@ -70,7 +70,7 @@ Details of these and other changes are in the sections that follow.
   definitions.  In addition there are new types for different types of owners.  These are **ComponentOwner**
   and **DataItemOwner**.
 
-  See new type descriptions in model [0445](../open-metadata-publication/website/open-metadata-types/0445-Governance-Roles.md).
+  See new type descriptions in model [0445](/egeria-docs/types/4/0445-Governance-Roles.md).
   
 * Extend the **GovernanceResponsibilityAssignment**
 
@@ -79,7 +79,7 @@ Details of these and other changes are in the sections that follow.
   that governance responsibilities can be added to any role, such as **ProjectManager** and **CommunityMember**,
   rather than just specialized governance roles.
   
-  See new type descriptions in model [0445](../open-metadata-publication/website/open-metadata-types/0445-Governance-Roles.md).
+  See new type descriptions in model [0445](/egeria-docs/types/4/0445-Governance-Roles.md).
 
 * Deprecating the **domain** attribute in various governance types.
 
@@ -89,7 +89,7 @@ Details of these and other changes are in the sections that follow.
   In this release, the use of **domain** is deprecated in **GovernanceDefinition**,
   **GovernanceZone**, **SubjectAreaDefinition**, **GovernanceMetric**, **GovernanceRole** and **GovernanceOfficer**.
   
-  See new type descriptions in model [0401](../open-metadata-publication/website/open-metadata-types/0401-Governance-Definitions.md).
+  See new type descriptions in model [0401](/egeria-docs/types/4/0401-Governance-Definitions.md).
 
 * Extensions to governance drivers.
 
@@ -97,7 +97,7 @@ Details of these and other changes are in the sections that follow.
   **BusinessImperative**.  It is also possible to link governance drivers using the new
   **GovernanceDriverLink** relationship.
   
-  See new type descriptions in model [0405](../open-metadata-publication/website/open-metadata-types/0405-Governance-Drivers.md).
+  See new type descriptions in model [0405](/egeria-docs/types/4/0405-Governance-Drivers).
 
 * Update to **AssetOrigin** classification.
 
@@ -105,7 +105,7 @@ Details of these and other changes are in the sections that follow.
   organization, business capability and other values.  2.10 adds new attributes to identify if the
   organization or business capability is identified by its GUID or qualifiedName.
   
-  See new type descriptions in model [0440](../open-metadata-publication/website/open-metadata-types/0440-Organizational-Controls.md).
+  See new type descriptions in model [0440](/egeria-docs/types/4/0440-Organizational-Controls).
 
 * Improve IncidentClassifiers.
 
@@ -114,7 +114,7 @@ Details of these and other changes are in the sections that follow.
   now inherits from **Referencable** and there is a new classification called **IncidentClassifierSet**
   to mark a **Collection** entity as containing IncidentClassifier definitions.
 
-  See new type descriptions in model [0470](../open-metadata-publication/website/open-metadata-types/0470-Incident-Reporting.md).
+  See new type descriptions in model [0470](/egeria-docs/types/4/0470-Incident-Reporting).
   
 * Deprecation of **ResponsibilityStaffContact**.
 
@@ -157,12 +157,12 @@ point Java 8 will no longer be supported for new releases.
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.10.png)
 
-Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
 # Further Help and Support
 
-See the [Community Guide](../Community-Guide.md).
+See the [Community Guide](/egeria-docs/guides/community/).
 
 --8<-- "snippets/abbr.md"
