--- a/site/docs/release-notes/2-11.md
+++ b/site/docs/release-notes/2-11.md
@@ -157,6 +157,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-2.11){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](2-11.svg)](../roadmap)
+    [![Egeria implementation status](2-11.svg)](/egeria-docs/release-notes/roadmap/)
 
 --8<-- "snippets/abbr.md"
