--- a/site/docs/release-notes/2-4.md
+++ b/site/docs/release-notes/2-4.md
@@ -40,7 +40,7 @@ has however been updated to include 2.4 images, so will now work even if unchang
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.4.png)
 
-Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
