--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -113,13 +113,13 @@ Release 2.6 also contains many bug fixes and minor improvements & dependency upd
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.6.png)
 
-Link to Egeria's [Roadmap](../roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
 # Further Help and Support
 
-As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](slack.lfaidata.foundation), and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
+As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfai.foundation/){ target=lf }, and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
 
 Continue to use these resources, along with GitHub to report bugs or ask questions.
 
