--- a/site/docs/release-notes/2-8.md
+++ b/site/docs/release-notes/2-8.md
@@ -58,18 +58,18 @@ on this page:
 
 ### Metadata Types
 
-* Updates to the location types in [model 0025](../open-metadata-publication/website/open-metadata-types/0025-Locations.md):
+* Updates to the location types in [model 0025](/egeria-docs/types/0/0025-Locations):
    * Add the **mapProjection** property to the **FixedLocation** classification
    * Change the **address** property to **networkAddress** in the **CyberLocation** classification
    * Deprecated **HostLocation** in favor of the **AssetLocation** relationship 
    
 * Deprecate the **RuntimeForProcess** relationship since it is superfluous - use **ServerAssetUse** since
   **Application** is a **SoftwareServerCapability**.
-  See [model 0045](../open-metadata-publication/website/open-metadata-types/0045-Servers-and-Assets.md).
+  See [model 0045](/egeria-docs/types/0/0045-Servers-and-Assets).
 
 * Replace the **deployedImplementationType** property with the **businessCapabilityType** in the **BusinessCapability**
   since it is a more descriptive name.
-  See [model 0440](../open-metadata-publication/website/open-metadata-types/0440-Organizational-Controls.md).
+  See [model 0440](/egeria-docs/types/4/0440-Organizational-Controls).
 
 ### Performance workbench
 
@@ -137,13 +137,13 @@ For details on both see the commit history in GitHub.
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.8.png)
 
-Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
 # Further Help and Support
 
-As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](slack.lfaidata.foundation), and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
+As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfai.foundation/){ target=lf }, and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
 
 Continue to use these resources, along with GitHub to report bugs or ask questions.
 
