--- a/site/docs/release-notes/3-0.md
+++ b/site/docs/release-notes/3-0.md
@@ -21,7 +21,7 @@
         Java releases beyond Java 11 up to the current release have some informal testing, and we do build verification
         on the current release (currently 16).
 
-        See [Java](../developer-resources/languages/Java.md) for further information.
+        See [Java](/egeria-docs/guides/contributor/languages/#java) for further information.
     
     ??? change "Defaults to multiple topics for cohorts"
         The option added in [release 2.11](../2-11/) to allow multiple topics per cohort now becomes the default in
@@ -34,6 +34,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits/egeria-release-3.0){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.svg)](../roadmap)
+    [![Egeria implementation status](latest.svg)](/egeria-docs/release-notes/roadmap/)
 
 --8<-- "snippets/abbr.md"
