--- a/site/docs/release-notes/1-0.md
+++ b/site/docs/release-notes/1-0.md
@@ -7,27 +7,27 @@
 Release 1.0 provides the open metadata integration and exchange between
 metadata repositories:
 
-* The [Open Connector Framework (OCF)](../open-metadata-implementation/frameworks/open-connector-framework)
+* The [Open Connector Framework (OCF)](/egeria-docs/frameworks/ocf/overview/)
   provides standard interfaces for implementing connectors.  These are used
-  to access the data stored in [Assets](../open-metadata-implementation/access-services/docs/concepts/assets)
+  to access the data stored in [Assets](/egeria-docs/concepts/asset/)
   and to plug in platform capabilities into the Open Metadata Repository Services (OMRS).
 
-* The implementation of the [Open Metadata Repository Services (OMRS)](../open-metadata-implementation/repository-services).
-  The repository services provide support for the [open metadata types](../open-metadata-publication/website/open-metadata-types),
+* The implementation of the [Open Metadata Repository Services (OMRS)](/egeria-docs/services/omrs/).
+  The repository services provide support for the [open metadata types](/egeria-docs/types/),
   the interfaces used by a repository technology the wants to support the
   open metadata protocols, the event management for open metadata replication
   and the cohort registration and management.
   
   The repository services can be used as embeddable libraries
   in technologies that wish to participate in an
-  [open metadata repository cohort](../open-metadata-implementation/repository-services/docs/open-metadata-repository-cohort.md).
+  [open metadata repository cohort](/egeria-docs/services/omrs/cohort/).
 
 
 ## Egeria Implementation Status at Release 1.0
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.0.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
