--- a/site/docs/release-notes/1-1.md
+++ b/site/docs/release-notes/1-1.md
@@ -11,25 +11,25 @@ Below are the highlights:
 
 * A [persistent metadata repository](../open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector) based on JanusGraph.
 
-* A multi-tenant [OMAG Server Platform](../open-metadata-publication/website/omag-server)
+* A multi-tenant [OMAG Server Platform](/egeria-docs/concepts/omag-server/)
   that is able to host one to many metadata servers and/or governance servers.
   This platform supports APIs to administer servers, start and stop servers and query their
   status.  The platform offers a connector to change the store used for configuration
   documents and to control who can issue platform API calls.
   
-* There are now [tutorials](../open-metadata-resources/open-metadata-tutorials) and
-  [hands-on labs](../open-metadata-resources/open-metadata-labs) demonstrating
+* There are now [tutorials](/egeria-docs/education/tutorials/overview/) and
+  [hands-on labs](/egeria-docs/education/open-metadata-labs/) demonstrating
   the configuring and start up of servers on the OMAG Server Platform.
   The aim is to help people to get up and running
   with the Egeria technology.  In addition, there are both [docker scripts and
-  Kubernetes helm charts](../open-metadata-resources/open-metadata-deployment) to deploy
+  Kubernetes helm charts](/egeria-docs/guides/operations/kubernetes/) to deploy
   the platforms and related technology used in the tutorials, samples and labs.
 
   + Note that currently we do not push release specific docker containers to dockerhub. If you are using the 
   docker/kubernetes environments it is recommended to work from the 'master' branch instead of this release. This will
   be addressed in a future release. 
 
-* The [Open Metadata Repository Services (OMRS)](../open-metadata-implementation/repository-services) shipped in the [first release](release-notes-1-0.md)
+* The [Open Metadata Repository Services (OMRS)](/egeria-docs/services/omrs/) shipped in the [first release](/egeria-docs/release-notes/1-0)
   have been enhanced with REST APIs to query the cohorts that a server
   is connected to.  There are also REST APIs to issue federated queries across
   the cohorts that a metadata server is connected to.
@@ -55,7 +55,7 @@ Below are the highlights:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.1.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
