--- a/site/docs/release-notes/1-2.md
+++ b/site/docs/release-notes/1-2.md
@@ -47,7 +47,7 @@ Below are the highlights:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.2.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
