--- a/site/docs/release-notes/1-4.md
+++ b/site/docs/release-notes/1-4.md
@@ -9,7 +9,7 @@ Release 1.4 focused on bug fixes and documentation.
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.4.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
