--- a/site/docs/release-notes/1-6.md
+++ b/site/docs/release-notes/1-6.md
@@ -13,7 +13,7 @@ Below are the highlights:
    * The [Audit Log Framework (ALF)](/egeria-docs/frameworks/alf/overview) provides interface definitions and classes to enable connectors to support natural language enabled diagnostics such as exception messages and audit log messages.
 
 * There is a new user interface module:
-    * The [Repository Explorer](../open-metadata-implementation/user-interfaces/ui-chassis/ui-chassis-spring/docs/RepositoryExplorer/RepositoryExplorerGuide.md) (Rex) can help you explore and visualize the metadata in a repository. It retrieves entities and relationships from the repository and displays them. A details panel also shows the properties and other information about an object. Each entity or relationship is added to a network diagram, which shows how they are connected.
+    * The [Repository Explorer :material-dock-window:](https://github.com/odpi/egeria/blob/master/open-metadata-implementation/user-interfaces/ui-chassis/ui-chassis-spring/docs/RepositoryExplorer/RepositoryExplorerGuide.md){ target=gh } (Rex) can help you explore and visualize the metadata in a repository. It retrieves entities and relationships from the repository and displays them. A details panel also shows the properties and other information about an object. Each entity or relationship is added to a network diagram, which shows how they are connected.
 
 * The Swagger-based API documentation for the Egeria server chassis has been reorganized to align with our modules structure & to provide links into our other documentation which also will clarify if the module is released, in Tech Preview, or still in development. The docs can be found at `https://<server>:<port>/swagger-ui.htm`. Further enhancements will follow in future releases.
 
@@ -27,7 +27,7 @@ Below are the highlights:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.6.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
