--- a/site/docs/release-notes/1-8.md
+++ b/site/docs/release-notes/1-8.md
@@ -5,13 +5,13 @@
 
 Below are the highlights of Release 1.8:
 
-* New tutorial information has been added in the form of the [Egeria Dojo](../open-metadata-resources/open-metadata-tutorials/egeria-dojo/README.md)
-* Usability & Capability improvements to [Repository Explorer](../open-metadata-implementation/user-interfaces/ui-chassis/ui-chassis-spring/docs/RepositoryExplorer/RepositoryExplorerGuide.md)
+* New tutorial information has been added in the form of the [Egeria Dojo](/egeria-docs/getting-started/dojo/)
+* Usability & Capability improvements to [Repository Explorer :material-dock-window:](https://github.com/odpi/egeria/blob/master/open-metadata-implementation/user-interfaces/ui-chassis/ui-chassis-spring/docs/RepositoryExplorer/RepositoryExplorerGuide.md){ target=gh }
 * Samples & utilities are now also packaged into jars with dependencies to make them easier to use (java -jar)
-* Connections to kafka will now retry to improve availability. See 'Bring up Issues' in the [connector documentation](../open-metadata-implementation/adapters/open-connectors/event-bus-connectors/open-metadata-topic-connectors/kafka-open-metadata-topic-connector/README.md)\
+* Connections to kafka will now retry to improve availability. See 'Bring up Issues' in the [connector documentation](/egeria-docs/connectors/resource/kafka-open-metadata-topic-connector/)\
 
 * New dependencies has been included:
-    * [Spring Boot Actuator](../open-metadata-implementation/server-chassis/server-chassis-spring/README.md) - Provides features to help you monitor and manage your application when you push it to production
+    * [Spring Boot Actuator :material-dock-window:](https://github.com/odpi/egeria/blob/master/open-metadata-implementation/server-chassis/server-chassis-spring/README.md){ target=gh } - Provides features to help you monitor and manage your application when you push it to production
     * micrometer-registry-prometheus - Exposes metrics in a format that can be scraped by a Prometheus server
     
 * Many dependencies have been updated. The most relevant include:
@@ -22,7 +22,7 @@ Below are the highlights of Release 1.8:
  
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-1.8.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
