--- a/site/docs/release-notes/2-0.md
+++ b/site/docs/release-notes/2-0.md
@@ -19,7 +19,7 @@ Below are the highlights:
  
  ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.0.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
