--- a/site/docs/release-notes/2-1.md
+++ b/site/docs/release-notes/2-1.md
@@ -20,7 +20,7 @@ The highlights include:
  
  ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.1.png)
  
- Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+ Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
  Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
