--- a/site/docs/release-notes/2-5.md
+++ b/site/docs/release-notes/2-5.md
@@ -48,7 +48,7 @@ Below are the highlights of the 2.5 release:
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.5.png)
 
-Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 --8<-- "snippets/abbr.md"
