--- a/site/docs/release-notes/2-7.md
+++ b/site/docs/release-notes/2-7.md
@@ -40,13 +40,13 @@ For details on both see the commit history in GitHub.
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.7.png)
 
-Link to Egeria's [Roadmap](../open-metadata-publication/website/roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
 # Further Help and Support
 
-As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](slack.lfaidata.foundation), and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
+As part of the Linux AI & Data Foundation, our slack channels have moved to the [LF AI & Data Slack workspace](https://slack.lfai.foundation/), and our mailing lists can now be found at https://lists.lfaidata.foundation/groups
 
 Continue to use these resources, along with GitHub to report bugs or ask questions.
 
