--- a/site/docs/release-notes/2-9.md
+++ b/site/docs/release-notes/2-9.md
@@ -48,13 +48,13 @@ For details on both see the commit history in GitHub.
 ## Known Issues
 
 * It is recommended to use a chromium-based browser such as Google Chrome or Microsoft Edge, or Apple Safari for the Egeria React UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96](https://github.com/odpi/egeria-react-ui/issues/96) .
-* When running the 'Understanding Platform Services' lab, ensure you run the 'egeria-service-config' notebook first and do not restart the python kernel before running this lab. See [#4842](https://github.com/odpi/egeria/issues/4842) .
+* When running the 'Understanding Platform Services' lab, ensure you run the 'egeria-service-config' notebook first and do not restart the python kernel before running this lab. See [#4842](https://github.com/odpi/egeria/issues/4842).
 
 # Egeria Implementation Status at Release 2.9
 
 ![Egeria Implementation Status](functional-organization-showing-implementation-status-for-2.9.png)
 
-Link to Egeria's [Roadmap](../roadmap) for more details about the
+Link to Egeria's [Roadmap](/egeria-docs/release-notes/roadmap/) for more details about the
 Open Metadata and Governance vision, strategy and content.
 
 
