--- a/site/docs/release-notes/3-2.md
+++ b/site/docs/release-notes/3-2.md
@@ -46,6 +46,6 @@
     For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
 
 ??? status "Implementation status"
-    [![Egeria implementation status](latest.svg)](../roadmap)
+    [![Egeria implementation status](latest.svg)](/egeria-docs/release-notes/roadmap/)
 
 --8<-- "snippets/abbr.md"
