fixing more broken links
Signed-off-by: Ljupcho Palashevski <ljupcho.palashevski@ing.com>

--- a/site/docs/release-notes/2-8.md
+++ b/site/docs/release-notes/2-8.md
@@ -39,7 +39,7 @@ added/updated/deleted/retrieved through the APIs. Extending the security connect
 Configuring the server security connector will not change with this feature.
 If the connector needs custom attributes to select rule sets etc, these can be specified in the configuration properties.
 
-See [https://egeria.odpi.org/open-metadata-implementation/admin-services/docs/user/configuring-the-server-security-connector.html](../open-metadata-implementation/admin-services/docs/user/configuring-the-server-security-connector.md).
+See [Configuring the server security connector :material-dock-window:](https://github.com/odpi/egeria/blob/master/open-metadata-implementation/admin-services/docs/user/configuring-the-server-security-connector.md){ target=lf }.
 
 ##### Implementing the server security connector
 
@@ -52,9 +52,7 @@ The security server connector will have two new interfaces that it can implement
 There is a single instance of the connector in the server so it is able to maintain counts and cache rules etc. It can also be implemented as a facade to a proprietary service.
 
 More information on the security connector can be found 
-on this page:
-
-[https://egeria.odpi.org/open-metadata-implementation/common-services/metadata-security/metadata-security-apis](../open-metadata-implementation/common-services/metadata-security/metadata-security-apis)
+on [Open Metadata Security](/egeria-docs/features/metadata-security/overview/) page.
 
 ### Metadata Types
 
@@ -76,7 +74,7 @@ on this page:
 The performance workbench intends to test the response time of all repository (metadata collection) methods for the
 technology under test. The volume of the test can be easily configured to also test scalability.
 
-More information is available [in the workbench's documentation](../open-metadata-conformance-suite/docs/performance-workbench/README.md).
+More information is available [in the workbench's documentation](/egeria-docs/guides/cts/overview/).
 
 ### Instance history interface
 
@@ -104,7 +102,7 @@ allows users to pull down just an overall summary of the results separately from
 detailed results are now broken down into separate files by profile and test case: each of which can therefore be
 retrieved individually.
 
-(So, for example, if you see from the summary that only 1-2 profiles are not conformant, you can retrieve just the
+(So, for example, if you see from the summary that only 1-2 profiles are not csonformant, you can retrieve just the
 details for those profiles rather than all details.)
 
 ### Changes to deployment of the Polymer based UI
