Fix links to admin diagrams
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/2-6.md
+++ b/site/docs/release-notes/2-6.md
@@ -4,6 +4,7 @@
 # Release 2.6 (February 2021)
 
 Release 2.6 adds support for:
+
  * New Governance Server called [Engine Host](/egeria-docs/concepts/engine-host)
    with associated [Open Metadata Engine Services (OMES)](/egeria-docs/services/omes).
    This Governance Server replaces the Discovery Server, Stewardship Server, Virtualizer and Security Officer Server.
@@ -25,14 +26,14 @@ where we want to manage persistent data explicitly - for example via a docker vo
 
 Because of this the default locations of a number of files have changed, so when deploying release 2.6 make sure you copy any existing
 files you need to preserve over to their new locations. If this is not done server configs and repository data may not
-be found, or configuration files may not be decrytable.
+be found, or configuration files may not be decryptable.
 
 | usage                | old | new | variables |
 | -------------------- | ------------------------- | ------------------------------------------ | -------------------------------- |
-| Server configuration | omag.server.{0}.config    | data/servers/{0}/config/{0}.config         | 0 = server Name                  |
-| File based audit log | omag.server.{0}.auditlog/ | data/servers/{0}/logs/auditlog/            | 0 = server Name                  |
-| cohort registry      | {0}.{1}.registrystore     | data/servers/{0}/cohorts/{1}.registrystore | 0 = server Name, 1 = cohort name |
-| Graph repository     | {0}-graph-repository/     | data/servers/{0}/repository/graph/         | 0 = server Name                  |
+| Server configuration | omag.server.{0}.config    | data/servers/{0}/config/{0}.config         | 0 = server name                  |
+| File based audit log | omag.server.{0}.auditlog/ | data/servers/{0}/logs/auditlog/            | 0 = server name                  |
+| cohort registry      | {0}.{1}.registrystore     | data/servers/{0}/cohorts/{1}.registrystore | 0 = server name, 1 = cohort name |
+| Graph repository     | {0}-graph-repository/     | data/servers/{0}/repository/graph/         | 0 = server name                  |
 | Encrypted config key | keystore_*                | data/platform/keys/keystore_*              |                                  |
 
 The result of this is that all the dynamic data created by egeria locally in the filesystem is restricted to the 'data' directory
