--- a/site/docs/release-notes/3-4.md
+++ b/site/docs/release-notes/3-4.md
@@ -25,16 +25,14 @@
 
     ??? update "OMAG Server Platform Chassis & Connector Configuration Factory"
 
-    [Graph repository connector](https://github.com/odpi/egeria/open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector/README.md)
-    is not a dependency of [Connector configuration factory](https://github.com/odpi/egeria/open-metadata-implementation/adapters/open-connectors/connector-configuration-factory/README.md) 
-    anymore, therefore will not be included by the build into [ OMAG Server Platform Chassis ](https://github.com/odpi/egeria/open-metadata-implementation/server-chassis/server-chassis-spring/README.md).jar with dependencies of [Graph repository connector](https://github.com/odpi/egeria/open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector/README.md) .
-    It is now part of the build (maven and gradle), and to run a platform that have server(s) with Egeria graph repository,
-    the connector jar has to be placed into the classpath. The easiest way is to use Spring boot's loader.path property. Place the 
+    The [Graph repository connector](https://github.com/odpi/egeria/tree/master/open-metadata-implementation/adapters/open-connectors/repository-services-connectors/open-metadata-collection-store-connectors/graph-repository-connector)
+    is no longer a dependency of [Connector configuration factory](https://github.com/odpi/egeria//tree/master/open-metadata-implementation/adapters/open-connectors/connector-configuration-factory/README.md).  This means it will not be included into the [OMAG Server Platform](/egeria-docs/concepts/omag-server-platform) jar.  To run an OMAG Server Platform that has server(s) that are using the Egeria graph repository,
+    the connector's jar has to be placed into the classpath. The easiest way is to use Spring boot's loader.path property. Place the 
     jar in the 'lib' folder next to server-chassis-spring jar and run it with -Dloader.path=lib .
 
     ??? added "New function to return more detailed server status"
 
-    A new REST API 'GET {{baseURL}}/open-metadata/admin-services/users/{{adminUserId}}/servers/cocoMDS6/instance/status' has been added to returned more detailed status for a server.
+    A new REST API 'GET {{baseURL}}/open-metadata/admin-services/users/{{adminUserId}}/servers/{{serverName}}}}/instance/status' has been added to returned more detailed status for a server.
 
     For example a running server will return 
 
