Remove duplication associated with the labs
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/1-1.md
+++ b/site/docs/release-notes/1-1.md
@@ -17,8 +17,8 @@ Below are the highlights:
   status.  The platform offers a connector to change the store used for configuration
   documents and to control who can issue platform API calls.
   
-* There are now [tutorials](/egeria-docs/education/tutorials/overview/) and
-  [hands-on labs](/egeria-docs/education/open-metadata-labs/) demonstrating
+* There are now [tutorials](/egeria-docs/education/overview/#individual-tutorials) and
+  [hands-on labs](/egeria-docs/education/open-metadata-labs/overview) demonstrating
   the configuring and start up of servers on the OMAG Server Platform.
   The aim is to help people to get up and running
   with the Egeria technology.  In addition, there are both [docker scripts and
