--- a/site/docs/release-notes/2-4.md
+++ b/site/docs/release-notes/2-4.md
@@ -18,8 +18,7 @@
   no longer includes static content. It is now required to deploy the [egeria-ui]( https://github.com/odpi/egeria-ui)
   project in addition to the spring application.
   A [docker image](https://hub.docker.com/r/odpi/egeria-uistatic) is available, 
-  and the [docker-compose](https://github.com/odpi/egeria/blob/master/open-metadata-resources/open-metadata-tutorials/lab-infrastructure-guide/running-docker-compose.md) 
-  & [Kubernetes](https://github.com/odpi/egeria/blob/master/open-metadata-resources/open-metadata-tutorials/lab-infrastructure-guide/running-kubernetes.md) 
+  and the docker-compose and Kubernetes
   lab environments include this pre-configured.
 * Additional [Access Services Functional Verification tests](https://github.com/odpi/egeria/tree/master/open-metadata-test/open-metadata-fvt/access-services-fvt) have been added to improve code quality
 * Bug fixes
