Improvements to git tutorial
Signed-off-by: Mandy Chessell <mandy.e.chessell@gmail.com>

--- a/site/docs/release-notes/2-9.md
+++ b/site/docs/release-notes/2-9.md
@@ -15,7 +15,7 @@ Details of these and other changes are in the sections that follow.
 ### Metadata Types
 
 * The **UserProfileManager**, **UserAccessDirectory** and **MasterDataManager** classification for **Referenceables** has been added
-to model [0056 Asset Managers](/egeria-docs/types/0/0056-Asset-Managers).
+to model [0056 resource Managers](/egeria-docs/types/0/0056-Resource-Managers).
 * A new relationship called **ActionTarget** to link a **To Do** to the elements that need work has been added
 to model [0137 Actions for People](/egeria-docs/types/1/0137-Actions).
 * A new attribute called **filterExpression** has been added to the **Port** entity in
