Initial 3.5 release notes
Signed-off-by: Nigel Jones <nigel.l.jones+git@gmail.com>

--- a/site/docs/release-notes/3-5.md
+++ b/site/docs/release-notes/3-5.md
@@ -1,8 +1,66 @@
 <!-- SPDX-License-Identifier: CC-BY-4.0 -->
 <!-- Copyright Contributors to the Egeria project. -->
 
-# Release 3.5 (Planned for February 2022)
+# Release 3.5 (February 2022)
 
-Content to be updated.
+??? warning "Known Issues"
+
+    ??? info "Use chromium-based browser for UIs"
+         It is recommended to use a chromium-based browser such as Google Chrome, Microsoft Edge or Apple Safari for the Egeria Ecosystem UI. Some parts of the UI experience such as Dino currently experience problems with Firefox. See [odpi/egeria-react-ui#96 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/96){ target=gh }.
+
+         This applies to version 3.4.0 as used by our helm charts.
+
+    ??? info "Config documents cannot be displayed in Dino"
+
+         Config documents cannot be displayed in the Egeria Ecosystem UI (Dino). See [egeria-ract-ui#264 :material-dock-window:](https://github.com/odpi/egeria-react-ui/issues/264){ target=gh }.
+
+         This applies to version 3.4.0 as used by our helm charts.
+
+
+???+ functional "Functional changes"
+      None
+
+???+ types "Type changes: :material-plus-circle: added, :material-adjust: modified, :material-alert-circle: deprecated"
+      None.
+
+???+ "Container Deployment"
+
+    ??? info "Container Images support arm64"
+
+         The Egeria container image is now multi-architecture, supporting both arm64 & x86_64 architectures. This now allows execution on Apple Silicon based macs, and Raspberry pi running 64 bit OS in addition to Intel based environments.
+
+         See [https://quay.io/odpi/egeria:material-dock-window:](https://quay.io/odpi/egeria){ target=docker } and [https://docker.io/odpi/egeria:material-dock-window:](https://docker.io/odpi/egeria){ target = quay }
+
+    ??? info "Helm Charts updated & support arm64"
+
+        * Helm Charts have been updated to release 3.5.0 to include this release of Egeria 3.5.
+        * Ecosystem UI remains at 3.4.0
+        * General UI remains at 3.2.0
+        * Lab, Base charts now additionally support arm64 including for use on Apple Silcon based macs and Raspberry pi running a 64 bit OS and use Strimzi 0.27.1 for Kafka.
+        * Lab, Base charts now use [Strimzi:material-dock-window:](https://strimzi.io){ target = strimzi } 0.27.1 for Kafka
+
+        In this release of the charts, default security context should be sufficient for deployment in OpenShift, fixing an earlier issue.
+
+    ??? warning "docker-compose support removed"
+
+         Support for a docker-compose based deployment of Egeria was
+         deprecated in 3.1, and has now been removed. For a orchestrated
+         setup of our labs or a simple environment, use our Helm
+         Charts on Kubernetes.
+
+         You can continue to use container images directly & use these in your
+         own docker-compose configurations.
+
+???+ removals "Deprecations"
+
+      None.
+
+???+ bugs "Bug fixes and other updates"
+
+* 
+For details, see the [commit history in GitHub :material-dock-window:](https://github.com/odpi/egeria/commits){ target=gh }.
+
+??? status "Implementation status"
+[![Egeria implementation status](latest.svg)](../roadmap)
 
 --8<-- "snippets/abbr.md"
